fix_scrollbar

--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@ body {
 
 .App img {
   width: 200px;
-  /* margin-bottom: 60px; */
+  margin-bottom: 60px;
 }
 
 .Title {
